fixed deck menus z-index

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1035,7 +1035,7 @@ figure [class*="teaser-tag-"] {
 				list-style: none;
 				margin: 0;
 				padding: 0;
-				z-index: 99;
+				z-index: 100;
 				li {
 					background-color: $gray-light;
 					a {
